--- a/package.json
+++ b/package.json
@@ -4,6 +4,12 @@
   "engines": {
     "node": ">=15.0.0"
   },
+  "lint-staged": {
+    "src/**/!(yarn.lock)": "prettier --check",
+    "src/**/*.{css,scss}": "stylelint --allow-empty-input --fix",
+    "src/**/!(.eslintrc|.prettierrc|declarations.d|.storybook|.stylelintrc).{js,ts,tsx}": "eslint",
+    "src/**/*.spec.{js,ts,tsx}": "yarn test"
+  },
   "private": true,
   "scripts": {
     "build": "qwik build",
@@ -18,7 +24,8 @@
     "lint": "eslint \"src/**/*.ts*\"",
     "preview": "qwik build preview && vite preview --open",
     "start": "vite --open --mode ssr",
-    "qwik": "qwik"
+    "qwik": "qwik",
+    "prepare": "husky install"
   },
   "devDependencies": {
     "@builder.io/qwik": "0.15.2",
@@ -29,8 +36,17 @@
     "@typescript-eslint/parser": "5.45.0",
     "eslint": "8.28.0",
     "eslint-plugin-qwik": "0.15.2",
+    "eslint-plugin-simple-import-sort": "^8.0.0",
+    "husky": "^8.0.2",
+    "lint-staged": "^13.1.0",
     "node-fetch": "3.3.0",
+    "postcss-scss": "^4.0.6",
     "prettier": "2.8.0",
+    "sass": "^1.57.0",
+    "stylelint": "^14.16.0",
+    "stylelint-config-prettier": "^9.0.4",
+    "stylelint-config-standard-scss": "^6.1.0",
+    "stylelint-order": "^5.0.0",
     "typescript": "4.9.3",
     "vite": "3.2.4",
     "vite-tsconfig-paths": "3.5.0"
