--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "src/**/!(yarn.lock)": "prettier --check",
     "src/**/*.{css,scss}": "stylelint --allow-empty-input --fix",
     "src/**/!(.eslintrc|.prettierrc|declarations.d|.storybook|.stylelintrc).{js,ts,tsx}": "eslint",
-    "src/**/*.spec.{js,ts,tsx}": "yarn test"
+    "src/**/*.spec.{js,ts,tsx}": "test"
   },
   "private": true,
   "scripts": {
@@ -22,10 +22,11 @@
     "fmt": "prettier --write .",
     "fmt.check": "prettier --check .",
     "lint": "eslint \"src/**/*.ts*\"",
+    "prepare": "husky install",
     "preview": "qwik build preview && vite preview --open",
     "start": "vite --open --mode ssr",
-    "qwik": "qwik",
-    "prepare": "husky install"
+    "test": "vitest --run",
+    "qwik": "qwik"
   },
   "devDependencies": {
     "@builder.io/qwik": "0.15.2",
@@ -34,6 +35,7 @@
     "@types/node": "latest",
     "@typescript-eslint/eslint-plugin": "5.45.0",
     "@typescript-eslint/parser": "5.45.0",
+    "@vitest/coverage-c8": "^0.25.8",
     "eslint": "8.28.0",
     "eslint-plugin-qwik": "0.15.2",
     "eslint-plugin-simple-import-sort": "^8.0.0",
@@ -49,6 +51,7 @@
     "stylelint-order": "^5.0.0",
     "typescript": "4.9.3",
     "vite": "3.2.4",
-    "vite-tsconfig-paths": "3.5.0"
+    "vite-tsconfig-paths": "3.5.0",
+    "vitest": "^0.25.0"
   }
 }
