--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "husky": "^8.0.2",
     "lint-staged": "^13.1.0",
     "node-fetch": "3.3.0",
+    "normalize.css": "^8.0.1",
     "postcss-scss": "^4.0.6",
     "prettier": "2.8.0",
     "sass": "^1.57.0",
@@ -49,6 +50,7 @@
     "stylelint-config-prettier": "^9.0.4",
     "stylelint-config-standard-scss": "^6.1.0",
     "stylelint-order": "^5.0.0",
+    "the-new-css-reset": "^1.7.3",
     "typescript": "4.9.3",
     "vite": "3.2.4",
     "vite-tsconfig-paths": "3.5.0",
