--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,9 @@
     "noEmit": true,
     "types": ["node", "vite/client"],
     "paths": {
-      "~/*": ["./src/*"]
+      "~/*": ["./src/*"],
+      "components/*": ["./src/components/*"],
+      "config/*": ["./src/config/*"]
     }
   },
   "files": ["./.eslintrc.cjs"],
